--- a/projectsite/templates/students_list.html
+++ b/projectsite/templates/students_list.html
@@ -25,7 +25,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="pull-right">
-                                <a href="" class="btn btn-success btn-rounded">Add Student</a>
+                                <a href="{% url 'students-add' %}" class="btn btn-success btn-rounded">Add Student</a>
                             </div>
                         </div>
                     </div>
