--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -194,7 +194,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a href="notifications.html">
+							<a href="{% url 'college-list' %}">
 								<i class="la la-bell"></i>
 								<p>College</p>
 							</a>
