update the </td>student.program to fetch

--- a/projectsite/templates/org_members_list.html
+++ b/projectsite/templates/org_members_list.html
@@ -45,7 +45,7 @@
                                 {% for object in object_list %}
                                 <tr>
                                     <td>{{ object.student }}</td>
-                                    <td>{{ object.program.prog_name }}</td>
+                                    <td>{{ object.student.program.prog_name }}</td>
                                     <td>{{ object.organization }}</td>
                                     <td>{{ object.date_joined }}</td>
                                     <td>
