--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -169,7 +169,7 @@
 					</div>
 					<ul class="nav">
 						<li class="nav-item">
-							<a href="{% url 'home' %}">
+							<a href="{% url 'chart' %}">
 								<i class="la la-dashboard"></i>
 								<p>Dashboard</p>
 								
@@ -213,7 +213,7 @@
 				{% block content %}
                 {% endblock %}
 
-				<footer class="footer">
+			<!-----	<footer class="footer">
 					<div class="container-fluid">
 						<nav class="pull-left">
 							<ul class="nav">
@@ -239,7 +239,7 @@
 						</div>				
 					</div>
 				</footer>
-
+		--->
 			</div>
 		</div>
 	</div>
@@ -278,4 +278,8 @@
 <script src="{% static 'js/plugin/chart-circle/circles.min.js' %}"></script>
 <script src="{% static 'js/plugin/jquery-scrollbar/jquery.scrollbar.min.js' %}"></script>
 <script src="{% static 'js/ready.min.js' %}"></script>
+
+
+<script src="{% static 'js/plugin/chartist/chartist.min.js' %}"></script>
+
 </html>
