--- a/projectsite/templates/program_list.html
+++ b/projectsite/templates/program_list.html
@@ -48,7 +48,7 @@
                                     <td>{{ object.college }}</td>
                                     <td>
                                         <a href="program_list/{{ object.id }}">Edit</a>
-                                        <a href="program_list/{{ object.id }}/delete"\\class="text-danger">Delete</a>
+                                        <a href="program_list/{{ object.id }}/delete"\\class="text-danger" style="color: rgb(250, 109, 109);">Delete</a>
                                     </td>
                                 </tr>
                                 {% empty %}
