--- a/projectsite/templates/org_list.html
+++ b/projectsite/templates/org_list.html
@@ -17,7 +17,9 @@
                                     <input type="text" placeholder="Search ..." class="form-control" name="q" />
                                     <div class="input-group-append">
                                         <span class="input-group-text">
-                                            <i class="la la-search search-icon"></i>
+                                            <button type="submit" class="input-group-text" title="Search" style="border:none; background:none; cursor:pointer;">
+                                                     <i class="la la-search search-icon"></i>
+                                             </button
                                         </span>
                                     </div>
                                 </div>
